--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "author": "Arif Febriansyah",
     "license": "ISC",
     "dependencies": {
+        "argon2": "^0.30.3",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "helmet": "^7.0.0",
+        "jsonwebtoken": "^9.0.1",
         "morgan": "^1.10.0",
-        "pg": "^8.11.1"
+        "pg": "^8.11.1",
+        "xss": "^1.0.14"
     },
     "repository": {
         "type": "git",
